--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,8 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Trellos</a>
+      <a class="navbar-brand" href="#"><i class="fa fa-circle-o-notch"></i>
+Trellos</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
