--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,7 @@
-<h1>Hello World. This is a test.</h1>
+
+<div class="jumbotron">
+  <h1><i class="fa fa-circle-o-notch"></i> Trellos</h1>
+
+  <p>This is my smart To Do app, made with Ruby on Rails</p>
+  <%= link_to 'Sign up', "#", class: 'btn btn-primary btn-lg'%>
+</div>
